# AiDoc

./: .gitignore  README.md  dump.json  main.py  pyproject.toml
src/: main.py
src/aidoc/: main.py  python_parser.py  test_parsing.py
tests/test_aidoc/: test_main.py
