[project]
name = "aidoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "drithird", email = "drithird@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.4.7",
]

[project.scripts]
aidoc = "aidoc.main:main "

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]